--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -1,3 +1,4 @@
-<p>
-  aboutus works!
-</p>
+<h3>About Us Page</h3>
+<a [routerLink]="['/aboutus/about-us-menu1']">Menu 1</a> |
+<a [routerLink]="['/aboutus/about-us-menu2']">Menu 2</a>
+<router-outlet></router-outlet>
